# main

./: README.md
backend/: index.js  package.json
backend/controllers/: conversionController.js  executeController.js  transactionController.js
backend/lib/: addressLibrary.js  networks.js
backend/lib/contracts/: BubbleWallet.js  OpenBatchExecutor.js  Proxy.js  ProxyFactory.js
backend/routes/: conversion.js  execute.js  transaction.js
backend/utils/: storage.js  wallet.js
client/: .gitignore  next.config.mjs  package.json
client/app/: globals.css  layout.js  page.js
client/app/chat/: page.js
client/app/contacts/: page.js
client/app/dashboard/: page.js
client/app/send/: page.js
client/app/settings/: page.js
client/app/transaction/: layout.js  page.js
client/components/ui/: pin-input.js
client/hooks/: useInitialize.js  useTransaction.js  useUtils.js  useWallet.js
client/lib/: addressLibrary.js  networks.js
client/providers/: DashboardProvider.js  InitProvider.js
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/python_client/: client.py
client/src-tauri/src/: lib.rs
client/stores/: useChatStore.js  useContactsStore.js  useDashboardStore.js  useNetworkStore.js  useWalletStore.js
client/utils/: transactionUtils.js
contracts/: .gitignore  hardhat.config.js
contracts/contracts/: BubbleWallet.sol  Proxy.sol  ProxyFactory.sol
contracts/scripts/: deploy.js
hardware/: README.md  boot.py  circuitpython_uuid4.py  code.py  db.py  file_transfer.py  keccak.py  logger.py  signing.py
llm_inference_test/src/: main.py
(+37 files in other folders)
