[package]
name = "Bubbl"
version = "0.1.0"
description = "AI-Powered Hardware Wallet with Built-In Offline Intelligence"
authors = ["AnoyRC", "GautamRaj", "ShambaC", "IshaniSen2612"]
license = ""
repository = "https://github.com/Bubbl-Wallet/main"
edition = "2025"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["full"] }
tauri-plugin-deep-link = "2"
pyo3 = { version = "0.26.0", features = ["auto-initialize"] }
once_cell = "1.21.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = { version = "2.0.0", features = ["deep-link"] }